# OOP-5

./: CMakeLists.txt  Dockerfile.dockerfile  README.md  main.cpp
src/: stack.h
tests/: test.cpp
